# hamptt

./: .coveragerc  .gitignore  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  LICENSE.md  LICENSE.txt  README.md  README.rst  platformio.ini  pyproject.toml  setup.cfg  setup.py
arduino/: esp32_bt_sketch.ino
docs/: Makefile  conf.py  index.rst
extras/kicad/: README.md
extras/kicad/Baofeng-PTT/: Baofeng-PTT  Baofeng-PTT-cache.lib  Baofeng-PTT.kicad_pcb  Baofeng-PTT.net  Baofeng-PTT.sch  Baofeng-PTT.sch-bak  Baofeng-PTT.xml
src/arduino/: esp32_bt_sketch.ino
src/arduiono/ptt_firmware_bt/: ptt_firmware_bt.ino
src/hamptt/: __init__.py  pttchooser.py  utils.py
src/hamptt/boards/: abstptt.py  btptt.py  gpiobtt.py
src/kicad/: .gitignore  README.md
src/kicad/Baofeng-PTT/: Baofeng-PTT-cache.lib  Baofeng-PTT.kicad_pcb  Baofeng-PTT.kicad_pcb-bak  Baofeng-PTT.net  Baofeng-PTT.pro  Baofeng-PTT.sch  Baofeng-PTT.sch-bak
tests/: __init__.py  conftest.py  test_bench_bt_ptt.py  test_ptt.py
