[tool.poetry]
name = "hamptt"
version = "0.3.0"
description = "Implementation of Push-To-Tank circuit for ham radio transmitters like Baofeng UV-5R"
authors = ["mrkeuz <mr.keuz@ya.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mrkeuz/hamptt/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Utilities"
]

[tool.poetry.urls]
"Documentation" = "https://github.com/mrkeuz/hamptt/"

[tool.poetry.dependencies]
python = "^3.8"
func_timeout = "*"
PyBluez = { version = "^0.23", optional = true }

[tool.poetry.extras]
bt = ["PyBluez"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
